Misc fixes / mixin template